--- a/web/user_new.html
+++ b/web/user_new.html
@@ -141,7 +141,11 @@
                   <button type="submit" class="btn btn-primary btn-dark">buchen</button>
                 </form>
 
+                <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
+                <!-- Our Custom JS -->
+                <script src="js/initfirebase.js"></script>
+                <script src="js/login.js"></script>
 
             </div>
 
