--- a/web/index.html
+++ b/web/index.html
@@ -46,8 +46,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
     <!-- Our Custom JS -->
-    <script src="firebaseinit.js"></script>
-    <script src="firebaseinit.js"></script>
+    <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
 
   </body>
