--- a/web/admin_rental_currently.html
+++ b/web/admin_rental_currently.html
@@ -193,12 +193,11 @@
     <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
 
     <!-- Our Custom JS -->
-    <script src="js/scripts.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
     <!-- Our Custom JS -->
-    <script src="firebaseinit.js"></script>
+    <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
 
 
