--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -115,7 +115,7 @@
             </nav>
 
             <div class="container">
-              <form class="form-horizontal" role="form" method="POST" action="admin_user_all.html">
+              <form class="form-horizontal" role="form">
                   <div class="row">
                       <div class="col-md-3"></div>
                       <div class="col-md-6">
@@ -173,7 +173,7 @@
                           <div class="form-group has-danger">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
-                                  <input type="password" name="kraftstoff" class="form-control" id="kraftstoff"
+                                  <input type="text" name="kraftstoff" class="form-control" id="kraftstoff"
                                          placeholder="Password" required>
                               </div>
                           </div>
@@ -196,7 +196,7 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="schaltung" class="form-control"
+                                  <input type="text" name="schaltung" class="form-control"
                                          id="schaltung" placeholder="Password" required>
                               </div>
                           </div>
@@ -212,7 +212,7 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="tueren" class="form-control"
+                                  <input type="text" name="tueren" class="form-control"
                                          id="tueren" placeholder="Password" required>
                               </div>
                           </div>
@@ -228,7 +228,7 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="klima" class="form-control"
+                                  <input type="text" name="klima" class="form-control"
                                          id="klima" placeholder="Password" required>
                               </div>
                           </div>
@@ -244,7 +244,7 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="navigationsgeraet" class="form-control"
+                                  <input type="text" name="navigationsgeraet" class="form-control"
                                          id="navigationsgeraet" placeholder="Password" required>
                               </div>
                           </div>
@@ -260,7 +260,7 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="plaetze" class="form-control"
+                                  <input type="text" name="plaetze" class="form-control"
                                          id="plaetze" placeholder="Password" required>
                               </div>
                           </div>
@@ -268,7 +268,7 @@
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="raucherwage">Raucherwagen</label>
+                          <label for="raucherwagen">Raucherwagen</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group">
@@ -276,8 +276,8 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="raucherwage" class="form-control"
-                                         id="raucherwage" placeholder="Password" required>
+                                  <input type="text" name="raucherwagen" class="form-control"
+                                         id="raucherwagen" placeholder="Password" required>
                               </div>
                           </div>
                       </div>
@@ -292,7 +292,7 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="stellplatznummer" class="form-control"
+                                  <input type="text" name="stellplatznummer" class="form-control"
                                          id="stellplatznummer" placeholder="Password" required>
                               </div>
                           </div>
@@ -301,7 +301,7 @@
                   <div class="row">
                       <div class="col-md-3"></div>
                       <div class="col-md-6">
-                          <button type="submit" class="btn btn-success" onclick="register()"><i class="fa fa-car"></i> Register</button>
+                          <input class="btn btn-dark btn-lg btn-primary btn-block" type="button"  onclick="addCar()" value="Hinzufuegen">
                       </div>
                   </div>
               </form>
@@ -336,6 +336,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/add_car.js"></script>
 
 
 </body>
